Fix: Correct UI layout issues on Programs page

--- a/css/program.css
+++ b/css/program.css
@@ -58,6 +58,7 @@ h3 {
   font-size: 1.7em;
   color: var(--color-secondary-medium);
   position:relative;
+  margin: 0 0 0 20px;
 }
 h4 {
   font-weight: 400;
@@ -206,8 +207,7 @@ a:active {
 
 .programlist-subscribe .discuss-community{
   display: flex;
-  width: 80vw;
-  gap: 1rem;
+  gap: 2rem;
   margin: 0 auto;
 }
 
@@ -231,7 +231,7 @@ a:active {
 }
 
 .programlist-subscribe .form-container{
-  width: 40rem;
+  width: 50rem;
   /* padding: 2rem 0; */
   /* padding-bottom: 6rem; */
   margin: 0 auto;
@@ -489,6 +489,10 @@ img {
   .program-p,
   dt {
     padding: 0rem 0.5rem !important;
+  }
+
+  h3{
+    margin: 20px 0 10px 0;
   }
 
   .subscribe {
